+ Fixed Rock theme onpage anchor links from being hidden by header (Fixes #3472)

--- a/RockWeb/Themes/Rock/Styles/theme.less
+++ b/RockWeb/Themes/Rock/Styles/theme.less
@@ -517,6 +517,15 @@ td.grid-actions {
 /*#region
 // 4. Theme Styling          */
 // -------------------------
+
+// Fixed Navbar #target fix
+:target:before {
+  content: "";
+  display: block;
+  height: @navbar-top-height;
+  margin-top: -@navbar-top-height;
+}
+
 .page-wrapper {
 
   @media (min-width: @screen-md-min) {
